--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 coverage
 aniso8601==0.92
 dicttoxml==1.6.0
-elasticsearch>=2.0.0,<3.0.0
+elasticsearch==1.6.0
 Flask==0.10.1
 Flask-Cors==1.10.3
 Flask-Cache==0.13.1
